# projgen

./: .gitignore  README.md  pyproject.toml  setup.cfg  str.txt
src/: cli.py  generator.py
src/engine/: context.py  generator.py  loader.py  plugin.py  renderer.py
src/features/auth/: feature.yaml  plugin.py
src/features/auth/adapters/backend/files/: routes.py.j2
src/features/auth/adapters/fastapi/files/: jwt.py.j2
src/features/logging/: plugin.py
src/features/logging/files/: logging_config.py.j2
templates/backend/: requirements.txt.j2  template.yaml
templates/backend/files/configs/: settings.dev.yaml  settings.prod.yaml
templates/backend/files/src/tests/: test_main.py.j2
templates/backend/files/src/{{ project_name }}/: main.py.j2
templates/backend/files/src/{{ project_name }}/models/: user.py.j2
templates/backend/files/src/{{ project_name }}/schemas/: common.py  user.py.j2
templates/backend/src/: main.py.j2
templates/fastapi/: template.yaml
templates/fastapi/files/src/: README.md.j2
templates/fastapi/files/src/tests/: test_health.py.j2
templates/fastapi/files/src/{{ project_name }}/api/: router.py.j2
templates/fastapi/files/src/{{ project_name }}/api/v1/: router.py.j2
templates/fastapi/files/src/{{ project_name }}/core/: config.py.j2  logging.py.j2
templates/fastapi/files/src/{{ project_name }}/db/: session.py.j2
templates/fastapi/files/src/{{ project_name }}/models/: __init__.py
templates/fastapi/files/src/{{ project_name }}/services/: user_service.py.j2
(+1 files in other folders)
