[metadata]
name = projgen
version = 0.1.0
description = A simple Python CLI tool to generate project templates.
long_description = file: README.md
long_description_content_type = text/markdown
author = Mohamed Amir
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = python, project-generator, boilerplate, cli, backend

[options]
packages = find:
python_requires = >=3.10
install_requires =
    jinja2>=3.1.2

[options.entry_points]
console_scripts =
    projgen = src.cli:main
